--- a/Bookstore/Views/Home/Index.cshtml
+++ b/Bookstore/Views/Home/Index.cshtml
@@ -6,25 +6,9 @@
 
 @foreach (Bookstore.Models.Book b in Model.Books)
 {
-    <div class="card card-outline-primary m-1 p-1">
-
-        <div class="bg-light p-1">
-            <h4>@b.Title</h4>
-
-            <span class="badge bg-info" style="float:left; color:white">Price: @b.Price</span>
-        </div>
-
-        <ul>
-            <li>Author: @b.Author</li>
-            <li>Publisher: @b.Publisher</li>
-            <li>Isbn: @b.Isbn</li>
-            <li>Classification: @b.Classification</li>
-            <li>Category: @b.Category</li>
-            <li>PageCount: @b.PageCount</li>
-        </ul>
-    </div>
-    //<partial name="BookSummary" model="b" />
+    <partial name="BookSummary" model="b" />
 }
+    
 
 <div page-blah="@Model.PageInfo" page-action=""
      page-class="btn" page-class-normal="btn-outline-dark"
