--- a/Bookstore/Views/_ViewImports.cshtml
+++ b/Bookstore/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Bookstore
 @using Bookstore.Models
 @using Bookstore.Models.ViewModels
+@using Bookstore.Infrastructure 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookstore
